--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,11 @@ jobs:
           npm install -g yarn
           yarn config set "strict-ssl" false -g
 
+      - name: install-python
+        uses: actions/setup-python@v5.3.0
+        with:
+          python-version: 2.7.18
+          
       - name: deps-init
         run: yarn setup
 
