--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           npm install -g yarn
           yarn config set "strict-ssl" false -g
+          yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
 
       - name: install-python
         uses: actions/setup-python@v5.1.0
