--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,9 @@ jobs:
         uses: actions/setup-python@v5.1.0
         with:
           python-version: 3.8
+          
+      - name: python-config
+        run: npm config set python /usr/bin/python3
 
       - name: deps-init
         run: yarn setup
