--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     strategy:
       fail-fast: false
@@ -39,9 +39,9 @@ jobs:
           yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
 
       - name: install-python
-        uses: actions/setup-python@v5.1.0
+        uses: actions/setup-python@5.3.0
         with:
-          python-version: 3.8
+          python-version: 2.7.18
           
       - name: python-config
         run: npm config set python /usr/bin/python3
