--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   publish:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
@@ -39,12 +39,10 @@ jobs:
           yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
 
       - name: install-python
-        uses: actions/setup-python@5.3.0
-        with:
-          python-version: 2.7.18
-          
-      - name: python-config
-        run: npm config set python /usr/bin/python3
+        run: |
+          sudo apt-get update
+          sudo apt install python2
+          python2 --version
 
       - name: deps-init
         run: yarn setup
