--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,13 +41,15 @@ jobs:
       - name: Install Pyenv
         run: |
           curl -fsSL https://pyenv.run | bash
+          vim  ~/.bashrc
           echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc
           echo '[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
           echo 'eval "$(pyenv init - bash)"' >> ~/.bashrc
+          source ~/.bashrc
+          vim  ~/.bash_profile
           echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile
           echo '[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
           echo 'eval "$(pyenv init - bash)"' >> ~/.bash_profile
-          source ~/.bashrc
           source ~/.bash_profile
           # 使环境变量生效
           # 检查是否生效
