--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,14 +46,10 @@ jobs:
           echo '[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc
           echo 'eval "$(pyenv init - bash)"' >> ~/.bashrc
           source ~/.bashrc
-          vim  ~/.bash_profile
-          echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile
-          echo '[[ -d $PYENV_ROOT/bin ]] && export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
-          echo 'eval "$(pyenv init - bash)"' >> ~/.bash_profile
-          source ~/.bash_profile
           # 使环境变量生效
           # 检查是否生效
           pyenv versions
+          exec "$SHELL"
 
       - name: install-python
         run: |
