--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,7 +47,7 @@ jobs:
           sudo source ~/.bashrc
           # 使环境变量生效
           # 检查是否生效
-          pyenv versions
+          echo pyenv versions
 
       - name: install-python
         run: |
