--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,26 +38,31 @@ jobs:
           yarn config set "strict-ssl" false -g
           yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
 
-      - name: Install Pyenv
-        run: |
-          curl -fsSL https://pyenv.run | bash
-          echo 'export PATH="$HOME/.pyenv/bin:$PATH"' >> $GITHUB_ENV
-          echo 'eval "$(pyenv init --path)"' >> $GITHUB_ENV
-          echo 'eval "$(pyenv init -)"' >> $GITHUB_ENV
-          # 使环境变量生效
-          # 检查是否生效
-          echo pyenv versions
-          pyenv install 2.7.18
-          pyenv global 2.7.18
+      # - name: Install Pyenv
+      #   run: |
+      #     curl -fsSL https://pyenv.run | bash
+      #     echo 'export PATH="$HOME/.pyenv/bin:$PATH"' >> $GITHUB_ENV
+      #     echo 'eval "$(pyenv init --path)"' >> $GITHUB_ENV
+      #     echo 'eval "$(pyenv init -)"' >> $GITHUB_ENV
+      #     # 使环境变量生效
+      #     # 检查是否生效
+      #     echo pyenv versions
+      #     pyenv install 2.7.18
+      #     pyenv global 2.7.18
 
       - name: install-python
-        run: |
-          # pyenv install 2.7.18
-          # pyenv global 2.7.18
-          python --version
+        uses: gabrielfalcao/pyenv-action@v17
+        with:
+          default: 2.7.18
+        # run: |
+        #   # pyenv install 2.7.18
+        #   # pyenv global 2.7.18
+        #   python --version
 
       - name: deps-init
-        run: yarn setup
+        run: |
+          python --version
+          yarn setup
 
       - name: lint
         run: yarn lint
