--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,6 @@ jobs:
           npm install -g yarn
           yarn config set "strict-ssl" false -g
           yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
-          npm config set registry https://registry.npmjs.org/ -g
 
       - name: install-python
         uses: gabrielfalcao/pyenv-action@v17
@@ -57,8 +56,7 @@ jobs:
 
       - name: publish
         run: |
-          npm config get registry
-          npm publish
+          npm publish --registry=https://registry.npmjs.org/ 
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
