--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zaihui/hui-design",
-  "version": "0.0.1",
+  "name": "@lhc/hui-design",
+  "version": "0.0.10",
   "description": "小程序组件库",
   "templateInfo": {
     "name": "mobx",
