--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,8 +54,14 @@ jobs:
       - name: build-ci
         run: yarn build:ci
 
+      - name: Use Node.js Publish
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.16.0
+
       - name: publish
         run: |
+          npm -v
           npm publish --registry=https://registry.npmjs.org/ 
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
