--- a/package.json
+++ b/package.json
@@ -154,5 +154,8 @@
     "scripts": {
       "postchangelog": "cp CHANGELOG.md docs/introduce/ && git add docs/introduce/CHANGELOG.md"
     }
+  },
+    "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
