--- a/package.json
+++ b/package.json
@@ -155,7 +155,7 @@
       "postchangelog": "cp CHANGELOG.md docs/introduce/ && git add docs/introduce/CHANGELOG.md"
     }
   },
-    "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
