--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,10 @@ run-name: ${{ github.actor }} Commit Messsage 🚀
 
 permissions:
   contents: read
-
+env:
+  TEST: 'https://github.com/lihaichao110/hui-design'
+  REPO_NAME: 'https://github.com/lihaichao110/hui-design'
+  
 on:
   workflow_dispatch:
 
@@ -17,7 +20,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    
+    if: github.repository == env.REPO_NAME
     steps:
       - name: Checkout
         uses: actions/checkout@v4
