--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,10 +5,6 @@ run-name: ${{ github.actor }} Commit Messsage 🚀
 permissions:
   contents: read
   
-env:
-  TEST: 'https://github.com/lihaichao110/hui-design'
-  REPO_NAME: 'https://github.com/lihaichao110/hui-design'
-  
 on:
   workflow_dispatch:
 
@@ -17,11 +13,14 @@ on:
       - master
       - dev
       - lihaichao110-CICD
+env:
+  TEST: 'https://github.com/lihaichao110/hui-design'
+  REPO_NAME: 'https://github.com/lihaichao110/hui-design'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: github.repository == ${{env.REPO_NAME}}
+    if: github.repository == env.REPO_NAME
     steps:
       - name: Checkout
         uses: actions/checkout@v4
