--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lihaichao-desgin",
-  "version": "0.0.11",
+  "name": "lhc-design",
+  "version": "0.0.12",
   "description": "小程序组件库",
   "templateInfo": {
     "name": "mobx",
