--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,24 @@ permissions:
   
 on:
   workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
   push:
     branches:
@@ -15,7 +33,7 @@ on:
       - lihaichao110-CICD
 
 jobs:
-  publish:
+  prebuild:
     runs-on: ubuntu-latest
     # 判断是不是主项目触发的
     if: ${{ github.event.repository.fork }}
