--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: GitHub Actions Publish Npm
 
 run-name: ${{github.event.head_commit.message}}
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
   
 on:
   workflow_dispatch:
