--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,13 @@ on:
       - lihaichao110-CICD
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: pr
+        run: |
+          echo github.event
+          
   prebuild:
     runs-on: ubuntu-latest
     # 判断是不是主项目触发的
@@ -42,7 +49,6 @@ jobs:
 
       - name: Install Yarn
         run: |
-          echo github.event
           npm install -g yarn
           yarn config set "strict-ssl" false -g
           yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
