--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,8 +60,11 @@ jobs:
 
       - name: Commit Update Version Change
         run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add package.json
           git commit -m 'Update Version'
-          git push --follow-tags origin HEAD:${{ github.ref }}
+          git push origin HEAD:${{ github.ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
