--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,8 +60,8 @@ jobs:
 
       - name: Commit Update Version Change
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git add package.json
           git commit -m 'Update Version'
           git push origin HEAD:${{ github.ref }}
