--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,13 +38,13 @@ jobs:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
 
-      # - name: Cache node_modules
-      #   uses: actions/cache@v4.2.0
-      #   with:
-      #     path: node_modules
-      #     key: node-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
-      #     restore-keys: |
-      #       node-modules-${{ runner.os }}-
+      - name: Cache node_modules
+        uses: actions/cache@v4.2.0
+        with:
+          path: node_modules
+          key: node-modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            node-modules-${{ runner.os }}-
 
       - name: Install Yarn
         run: |
