--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,10 +66,10 @@ jobs:
           yarn config set "strict-ssl" false -g
           yarn config set "sass_binary_site" https://npm.taobao.org/mirrors/node-sass/ -g
 
-      - name: Install Python
-        uses: gabrielfalcao/pyenv-action@v17
-        with:
-          default: 2.7.18
+      # - name: Install Python
+      #   uses: gabrielfalcao/pyenv-action@v17
+      #   with:
+      #     default: 2.7.18
 
       # - name: Init
       #   run: |
