--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
           git config --global user.email "actions@github.com"
           git add package.json
           git commit -m 'refactor: Update Version测试'
-          git push origin HEAD:${{ github.ref }}
+          git push -f origin HEAD:${{ github.ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
