--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{secrets.PUSH_TOKEN}}
 
       - name: Use Node.js
         uses: actions/setup-node@v4
