--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -86,8 +86,9 @@ jobs:
 
       - name: Publish
         run: |
-          npm publish
-          # npm publish --access public
+          npm access ls-packages
+          npm config get registry
+          npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
