fix: 修复部署npm时，上传错误问题

--- a/package.json
+++ b/package.json
@@ -166,5 +166,8 @@
     "scripts": {
       "postchangelog": "cp CHANGELOG.md docs/introduce/ && git add docs/introduce/CHANGELOG.md"
     }
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
